# advent-of-code

./: .gitignore
2021/python/: Makefile  pyproject.toml
2021/python/src/: day_1.py  day_2.py  day_3.py
2021/python/tests/: day_1_test.py  day_2_test.py  day_3_test.py
2022/rust/: README.md
2023/rust/src/: day2.rs  main.rs
2024/zig/: build.zig.zon
2024/zig/src/: day10.zig  day9.zig
2025/rust/: Cargo.toml
2025/rust/day-01/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-02/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-03/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-04/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-05/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-06/src/: main.rs  part_two.rs
2025/rust/day-07/src/: main.rs  part_one.rs  part_two.rs
2025/rust/day-08/: Cargo.toml
2025/rust/day-08/src/: main.rs  part_one.rs  part_two.rs
