[tool.poetry]
name = "aoc_2021"
version = "0.1.0"
description = ""
authors = ["Christopher Salotti <christopher.salotti@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
